Rotated images but hacky fix
Not sure why rotated; image 8 still not showing.

--- a/css/game.css
+++ b/css/game.css
@@ -15,7 +15,6 @@ h1 {
 img {
     max-width: 100%;
     height: auto;
-    image-orientation: from-image;
 }
 
 .rightside {
